[reservation] fix & feat: improve reservation logic and standardize list UI